--- a/error-404.html
+++ b/error-404.html
@@ -21,7 +21,7 @@
             <img class="img-error" src="assets/images/samples/error-404.svg" alt="Not Found">
             <h1 class="error-title">NOT FOUND</h1>
             <p class='fs-5 text-gray-600'>The page you are looking not found.</p>
-            <a href="index.php" class="btn btn-lg btn-outline-primary mt-3">Go Home</a>
+            <a href="./" class="btn btn-lg btn-outline-primary mt-3">Go Home</a>
         </div>
     </div>
 </div>
