--- a/error-403.html
+++ b/error-403.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404-JESM</title>
+    <title>403-JESM</title>
     <link rel="stylesheet" href="assets/css/main/app.css">
     <link rel="stylesheet" href="assets/css/pages/error.css">
     <link rel="shortcut icon" href="assets/images/logo/favicon.svg" type="image/x-icon">
@@ -18,9 +18,9 @@
 <div class="error-page container">
     <div class="col-md-8 col-12 offset-md-2">
         <div class="text-center">
-            <img class="img-error" src="assets/images/samples/error-404.svg" alt="Not Found">
-            <h1 class="error-title">NOT FOUND</h1>
-            <p class='fs-5 text-gray-600'>The page you are looking not found.</p>
+            <img class="img-error" src="assets/images/samples/error-403.svg" alt="Not Found">
+            <h1 class="error-title">Forbidden</h1>
+            <p class='fs-5 text-gray-600'>You are unauthorized to see this page.</p>
             <a href="./" class="btn btn-lg btn-outline-primary mt-3">Go Home</a>
         </div>
     </div>
